// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exports > css snapshot 1`] = `
"/* Generated by Tintwork (Groundwork Technologies) */
:root {
  --brand-50: #f3f7fd;
  --brand-100: #e2ecfb;
  --brand-200: #cbdbf5;
  --brand-300: #a6c5f5;
  --brand-400: #71a3f4;
  --brand-500: #3b82f6;
  --brand-600: #1667e3;
  --brand-700: #1157c1;
  --brand-800: #12469a;
  --brand-900: #113b7f;
  --brand-950: #0a244f;
}
"
`;

exports[`exports > dtcg snapshot 1`] = `
"{
  "$description": "Generated by Tintwork (Groundwork Technologies)",
  "brand": {
    "50": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.9748,
          0.0091,
          258.34
        ],
        "hex": "#f3f7fd"
      }
    },
    "100": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.94,
          0.023,
          258.36
        ],
        "hex": "#e2ecfb"
      }
    },
    "200": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.8875,
          0.0398,
          260.14
        ],
        "hex": "#cbdbf5"
      }
    },
    "300": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.8174,
          0.076,
          259.02
        ],
        "hex": "#a6c5f5"
      }
    },
    "400": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.7146,
          0.1307,
          259.68
        ],
        "hex": "#71a3f4"
      }
    },
    "500": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.6231,
          0.188,
          259.81
        ],
        "hex": "#3b82f6"
      }
    },
    "600": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.5444,
          0.2029,
          259.82
        ],
        "hex": "#1667e3"
      }
    },
    "700": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.4831,
          0.1791,
          259.7
        ],
        "hex": "#1157c1"
      }
    },
    "800": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.4147,
          0.1478,
          260.06
        ],
        "hex": "#12469a"
      }
    },
    "900": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.3673,
          0.1242,
          259.92
        ],
        "hex": "#113b7f"
      }
    },
    "950": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.2692,
          0.0854,
          260.03
        ],
        "hex": "#0a244f"
      }
    }
  }
}
"
`;

exports[`exports > json snapshot 1`] = `
"{
  "brand": {
    "50": "#f3f7fd",
    "100": "#e2ecfb",
    "200": "#cbdbf5",
    "300": "#a6c5f5",
    "400": "#71a3f4",
    "500": "#3b82f6",
    "600": "#1667e3",
    "700": "#1157c1",
    "800": "#12469a",
    "900": "#113b7f",
    "950": "#0a244f"
  }
}
"
`;

exports[`exports > scss snapshot 1`] = `
"// Generated by Tintwork (Groundwork Technologies)

$brand-50: #f3f7fd;
$brand-100: #e2ecfb;
$brand-200: #cbdbf5;
$brand-300: #a6c5f5;
$brand-400: #71a3f4;
$brand-500: #3b82f6;
$brand-600: #1667e3;
$brand-700: #1157c1;
$brand-800: #12469a;
$brand-900: #113b7f;
$brand-950: #0a244f;

$brand: (
  50: $brand-50,
  100: $brand-100,
  200: $brand-200,
  300: $brand-300,
  400: $brand-400,
  500: $brand-500,
  600: $brand-600,
  700: $brand-700,
  800: $brand-800,
  900: $brand-900,
  950: $brand-950,
);
"
`;

exports[`exports > tailwind v3 variants > cjs 1`] = `
"// Generated by Tintwork (Groundwork Technologies)
/** @type {import('tailwindcss').Config} */
module.exports = {
  theme: {
    extend: {
      colors: {
      brand: {
        50: '#f3f7fd',
        100: '#e2ecfb',
        200: '#cbdbf5',
        300: '#a6c5f5',
        400: '#71a3f4',
        500: '#3b82f6',
        600: '#1667e3',
        700: '#1157c1',
        800: '#12469a',
        900: '#113b7f',
        950: '#0a244f',
      },
      },
    },
  },
};
"
`;

exports[`exports > tailwind v3 variants > esm 1`] = `
"// Generated by Tintwork (Groundwork Technologies)
/** @type {import('tailwindcss').Config} */
export default {
  theme: {
    extend: {
      colors: {
      brand: {
        50: '#f3f7fd',
        100: '#e2ecfb',
        200: '#cbdbf5',
        300: '#a6c5f5',
        400: '#71a3f4',
        500: '#3b82f6',
        600: '#1667e3',
        700: '#1157c1',
        800: '#12469a',
        900: '#113b7f',
        950: '#0a244f',
      },
      },
    },
  },
};
"
`;

exports[`exports > tailwind v3 variants > ts 1`] = `
"// Generated by Tintwork (Groundwork Technologies)
import type { Config } from 'tailwindcss';

export default {
  theme: {
    extend: {
      colors: {
      brand: {
        50: '#f3f7fd',
        100: '#e2ecfb',
        200: '#cbdbf5',
        300: '#a6c5f5',
        400: '#71a3f4',
        500: '#3b82f6',
        600: '#1667e3',
        700: '#1157c1',
        800: '#12469a',
        900: '#113b7f',
        950: '#0a244f',
      },
      },
    },
  },
} satisfies Config;
"
`;

exports[`exports > tailwind v4 snapshot 1`] = `
"/* Generated by Tintwork (Groundwork Technologies) */
@import "tailwindcss";

@theme {
  --color-brand-50: oklch(97.5% 0.009 258.34);
  --color-brand-100: oklch(94% 0.023 258.36);
  --color-brand-200: oklch(88.8% 0.04 260.14);
  --color-brand-300: oklch(81.7% 0.076 259.02);
  --color-brand-400: oklch(71.5% 0.131 259.68);
  --color-brand-500: oklch(62.3% 0.188 259.81);
  --color-brand-600: oklch(54.4% 0.203 259.82);
  --color-brand-700: oklch(48.3% 0.179 259.7);
  --color-brand-800: oklch(41.5% 0.148 260.06);
  --color-brand-900: oklch(36.7% 0.124 259.92);
  --color-brand-950: oklch(26.9% 0.085 260.03);
}
"
`;

exports[`exports > tokens-studio snapshot 1`] = `
"{
  "brand": {
    "50": {
      "value": "#f3f7fd",
      "type": "color"
    },
    "100": {
      "value": "#e2ecfb",
      "type": "color"
    },
    "200": {
      "value": "#cbdbf5",
      "type": "color"
    },
    "300": {
      "value": "#a6c5f5",
      "type": "color"
    },
    "400": {
      "value": "#71a3f4",
      "type": "color"
    },
    "500": {
      "value": "#3b82f6",
      "type": "color"
    },
    "600": {
      "value": "#1667e3",
      "type": "color"
    },
    "700": {
      "value": "#1157c1",
      "type": "color"
    },
    "800": {
      "value": "#12469a",
      "type": "color"
    },
    "900": {
      "value": "#113b7f",
      "type": "color"
    },
    "950": {
      "value": "#0a244f",
      "type": "color"
    }
  }
}
"
`;
